[metadata]
name = muds
summary = My Ugly DevStack tool/generator/whatever
author = Me
author-email = me@myself.com
home-page = http://muds.me.com
include_package_data = True
classifier =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    muds

[global]
setup-hooks =
    pbr.hooks.setup_hook
